--- a/src/app/canvas/canvas.component.scss
+++ b/src/app/canvas/canvas.component.scss
@@ -101,3 +101,11 @@ ion-fab-button {
   padding-left: 8px;
   padding-top: 2px;
 }
+
+.canvas-color {
+  background-color: #ffffaa !important;
+  color: black;
+  ion-icon {
+    color: black
+  }
+}
