--- a/src/app/archive/archive.page.html
+++ b/src/app/archive/archive.page.html
@@ -1,94 +1,43 @@
-<!--
+<!-- HEADER TOOLBAR --> 
+
 <ion-header>
   <ion-toolbar>
-    <ion-title id="title">{{ 'ARCHIVE.TRACKS' | translate  }}</ion-title>
-    <ion-buttons slot="end">
-      <ion-button class="header-button" shape="round" fill="solid" (click)="openMenu()">
-        <ion-icon slot="icon-only" name="menu"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+    <ion-title>{{ 'ARCHIVE.TRACKS' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="custom-content">
-  <div class="ion-content-scroll-host">
-    <ion-list>
-      @for (item of fs.collection; track item) {
-        <ion-item>
-          <ion-checkbox
-            slot="start"
-            justify="space-between"
-            [(ngModel)]="item.isChecked"
-            (ionChange)="onChange()"
-            labelPlacement="end"
-          >
-            <ion-label [ngClass]="item.isChecked ? 'checked' : 'unchecked'">
-              {{ item.name }}<br>
-              {{ item.date | date: 'dd-MM-yyyy HH:mm' }}<br>
-              {{ item.place }}
-            </ion-label>
-          </ion-checkbox>
-        </ion-item>
-      }
-    </ion-list>
-  </div>
-
-  <div class="safe-area"></div>
-
-  <ion-menu side="start" contentId="main-content">
-    <ion-content>
-      <ion-list>
-        <ion-item class="menu-button" button [disabled]="!geography.searchLayer?.getSource()?.getFeatures()?.length" (click)="removeSearch()">{{'ARCHIVE.REMOVE_SEARCH' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]='(numChecked != 1)' (click)="exportTrackFile()">{{'ARCHIVE.EXPORT_FILE' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]='(numChecked != 1)' (click)="prepareImageExport()">{{'ARCHIVE.EXPORT_TRACK' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]="!!geography.archivedLayer?.getSource()?.getFeatures()?.length && !reference.archivedTrack" (click)="displayAllTracks(true)">{{'ARCHIVE.DISPLAY_ALL' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]="!geography.archivedLayer?.getSource()?.getFeatures()?.length || reference.archivedTrack" (click)="displayAllTracks(false)">{{'ARCHIVE.HIDE_ALL' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]='(numChecked == 0)' (click)="deleteTracks()">{{'ARCHIVE.REMOVE_TRACKS' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]='(numChecked != 1)' (click)="editTrack()">{{'ARCHIVE.EDIT_TRACK' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]='(numChecked != 1)' (click)="displayTrack(true)">{{'ARCHIVE.SHOW_REFERENCE' | translate}}</ion-item>
-        <ion-item class="menu-button" button [disabled]="(!reference.archivedTrack)" (click)="displayTrack(false)">{{'ARCHIVE.HIDE_REFERENCE' | translate}}</ion-item>
-
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-  <ion-content id="main-content"></ion-content>
-</ion-content>
--->
+<!-- REGULAR CONTENT -->
 
 <ion-content class="custom-content">
   <div class="ion-content-scroll-host">
-    <ion-list lines="full" class="archive-list">
+    <ion-list lines="full">
       @for (item of fs.collection; track item; let i = $index) {
         <ion-item-sliding #slidingItem>
-          
           <ion-item-options side="start">
             <ion-item-option 
               [color]="isTrackVisible(item) ? 'medium' : 'primary'" 
               (click)="toggleVisibility(item, slidingItem)">
               <ion-icon slot="top" [name]="isTrackVisible(item) ? 'eye-off-outline' : 'eye-outline'"></ion-icon>
-              {{ (isTrackVisible(item) ? 'ARCHIVE.HIDE_REFERENCE' : 'ARCHIVE.SHOW_REFERENCE') | translate }}
+              {{ (isTrackVisible(item) ? 'ARCHIVE.HIDE' : 'ARCHIVE.SHOW') | translate }}
             </ion-item-option>
-            <ion-item-option color="secondary" (click)="presentExportOptions(item, slidingItem)">
+            <ion-item-option color="secondary" (click)="exportTrackFile(item)">
               <ion-icon slot="top" name="share-outline"></ion-icon>
               {{ 'ARCHIVE.EXPORT_TRACK' | translate }}
             </ion-item-option>
           </ion-item-options>
-
           <ion-item>
-            <ion-checkbox slot="start" [(ngModel)]="item.isChecked" (ionChange)="onChange()"></ion-checkbox>
-            
-            <ion-label (click)="toggleCheck(item)">
+            <ion-icon name="chevron-forward-outline" slot="start" color="medium" style="font-size: 12px;"></ion-icon> 
+            <ion-label>
               <div class="item-content">
                 <strong [class.active-text]="isTrackVisible(item)">{{ item.name }}</strong>
                 <p class="item-date-subtitle">{{ item.date | date: 'dd-MM-yyyy' }}</p>
               </div>
             </ion-label>
-            
             @if (isTrackVisible(item)) {
               <ion-badge slot="end" color="success">Visible</ion-badge>
             }
+            <ion-icon name="chevron-back-outline" slot="end" color="medium" style="font-size: 12px;"></ion-icon>
           </ion-item>
-
           <ion-item-options side="end">
             <ion-item-option color="tertiary" (click)="editSpecificTrack(i, slidingItem)">
               <ion-icon slot="top" name="create-outline"></ion-icon>
@@ -99,17 +48,17 @@
               {{ 'ARCHIVE.REMOVE_TRACK' | translate }}
             </ion-item-option>
           </ion-item-options>
-
         </ion-item-sliding>      
       }
-    </ion-list>
-    
-    <div class="list-spacer"></div>
+    </ion-list> <div class="list-spacer"></div>
   </div>
 </ion-content>
 
-<!-- space for android controls -->
+<!-- SPACE FOR ANDROID CONTROLS -->
+
 <div class="bottom-safe-gray"></div>
+
+<!-- NAVIGATION BUTTONS -->
 
 <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
   <ion-row>
@@ -128,7 +77,7 @@
   </ion-row>
 </ion-fab>
 
-<!-- Deletion confirmation popover -->
+<!-- DELETION CONFIRMATION POPOVER -->
 
 <ion-popover
   [isOpen]="isConfirmDeletionOpen"
@@ -156,3 +105,26 @@
     </ion-list>
   </ng-template>
 </ion-popover>
+
+<!-- FAB CON LOS BOTONES SUPERIORS PARA MOSTRAR O ESCONDER TODOS LOS TRAYECTOS -->
+
+    <ion-fab slot="fixed" horizontal="end" vertical="top" class="bottom-safe">
+      <ion-row>
+        <div class="record-button archive-color" (click)="displayAllTracks(true)">
+          <span>{{ 'ARCHIVE.SHOW' | translate }}</span>
+          <ion-icon name="eye-outline"></ion-icon>
+          <span>{{ 'ARCHIVE.ALL' | translate }}</span>
+        </div>
+        <div class="record-button archive-color" (click)="displayAllTracks(false)">
+          <span>{{ 'ARCHIVE.HIDE' | translate }}</span>
+          <ion-icon name="eye-off-outline"></ion-icon>
+          <span>{{ 'ARCHIVE.ALL' | translate }}</span>
+        </div>
+      </ion-row>
+    </ion-fab>
+
+<!-- MAPA OCULTO -->
+
+<div id="export-container" style="position: absolute; top: 0; left: 0; width: 800px; height: 600px; opacity: 0; z-index: -1; pointer-events: none;">
+  <div id="map-export" style="width: 100%; height: 100%;"></div>
+</div>
